# numdb

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
numdb/: __init__.py  exceptions.py  misc.py
numdb/loader/: __init__.py  loader.py  metadata.py
numdb/spectrum/: __init__.py  conversions.py  filetypes.py  reader.py
numdb/spectrum/ftypereader/: __init__.py  csv_innospectra.py  opus_bruker.py
src/numdb/: __init__.py  misc.py
src/numdb/spectrum/: __init__.py  conversions.py  csv_innospectra.py  enums.py  filetypes.py  opus_bruker.py  reader.py
src/numdb/spectrum/ftypereader/: __init__.py  csv_innospectra.py  opus_bruker.py
tests/: test_misc.py
