[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/numdb"]

[project]
name = "numdb"
version = "0.0.5"
authors = [
  { name="ramsteak", email="ramsteak.git@gmail.com" },
]
description = "A package that imports from a filesystem database of folders"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pandas",
  "brukeropusreader"
]

[project.urls]
Homepage = "https://github.com/ramsteak/numdb"
Issues = "https://github.com/ramsteak/numdb/issues"
